[package]
name = "iota-sdk-bindings-core"
version = "0.1.0"
authors = ["IOTA Stiftung"]
edition = "2021"
homepage = "https://iota.org"
description = "Bindings core for the IOTA SDK"
license = "Apache-2.0"
publish = false

[dependencies]
iota-sdk = { path = "../../sdk", default-features = false, features = [
    "wallet",
    "protocol_parameters_samples",
    "tls",
] }

backtrace = { version = "0.3.71", default-features = false, features = ["std"] }
derivative = { version = "2.2.0", default-features = false }
fern-logger = { version = "0.5.0", default-features = false }
futures = { version = "0.3.30", default-features = false }
iota-crypto = { version = "0.23.1", default-features = false, features = [
    "slip10",
    "bip44",
] }
log = { version = "0.4.21", default-features = false }
packable = { version = "0.11.0", default-features = false, features = [
    "primitive-types",
] }
prefix-hex = { version = "0.7.1", default-features = false }
primitive-types = { version = "0.12.2", default-features = false }
serde = { version = "1.0.197", default-features = false }
serde_json = { version = "1.0.115", default-features = false }
strum = { version = "0.26.2", default-features = false, features = ["derive"] }
thiserror = { version = "1.0.58", default-features = false }
tokio = { version = "1.36.0", default-features = false }
url = { version = "2.5.0", default-features = false, features = ["serde"] }
zeroize = { version = "1.7.0", default-features = false }

[dev-dependencies]
pretty_assertions = { version = "1.4.0", default-features = false, features = [
    "alloc",
] }

[features]
events = ["iota-sdk/events"]
ledger_nano = ["iota-sdk/ledger_nano"]
mqtt = ["iota-sdk/mqtt"]
participation = ["iota-sdk/participation"]
rocksdb = ["iota-sdk/rocksdb"]
storage = ["iota-sdk/storage"]
stronghold = ["iota-sdk/stronghold"]
private_key_secret_manager = ["iota-sdk/private_key_secret_manager"]
