[package]
name = "iota-sdk-native"
version = "0.1.0"
authors = [ "IOTA Stiftung" ]
edition = "2021"
description = "Native wrapper for the IOTA SDK library"
documentation = "https://wiki.iota.org/iota-sdk/welcome"
homepage = "https://www.iota.org/"
repository = "https://github.com/iotaledger/iota-sdk"
license = "Apache-2.0"
keywords = [ "iota", "client", "wallet", "transaction", "native" ]
categories = [ "cryptography::cryptocurrencies" ]
publish = false

[lib]
name = "iota_sdk_native"
crate-type = [ "cdylib" ]
doc = false

[features]
default = ["std"]
std = ["zeroize/std"]

[dependencies]
iota-sdk-bindings-core = { path = "../core", default-features = false, features = [ "events", "rocksdb", "ledger_nano", "storage", "stronghold" ] }

futures = { version = "0.3.28", default-features = false }
once_cell = { version = "1.17.2", default-features = false }
serde_json = { version = "1.0.96", default-features = false }
tokio = { version = "1.28.2", default-features = false }
log = { version = "0.4.14" }
zeroize = { version = "1.6.0", default-features = false }