[package]
name = "iota-sdk-nodejs"
version = "0.1.0"
authors = ["IOTA Stiftung"]
edition = "2021"
description = "Node.js bindings for the IOTA SDK library"
documentation = "https://wiki.iota.org/sdk/welcome"
homepage = "https://www.iota.org/"
repository = "https://github.com/iotaledger/iota-sdk"
license = "Apache-2.0"
keywords = ["iota", "client", "wallet", "transaction", "nodejs"]
categories = ["cryptography::cryptocurrencies"]
exclude = ["index.node"]
publish = false

[lib]
crate-type = ["cdylib"]
doc = false

[dependencies]
async-trait = { version = "0.1.79", default-features = false }
iota-sdk-bindings-core = { path = "../core", default-features = false, features = [
    "events",
    "ledger_nano",
    "storage",
    "stronghold",
    "participation",
    "rocksdb",
    "mqtt",
    "private_key_secret_manager",
] }
log = { version = "0.4.21", default-features = false }
napi = { version = "2.16.1", default-features = false, features = ["async"] }
napi-derive = { version = "2.16.1", default-features = false }
once_cell = { version = "1.19.0", default-features = false }
serde_json = { version = "1.0.115", default-features = false }
thiserror = { version = "1.0.58", default-features = false }
tokio = { version = "1.36.0", default-features = false }

[build-dependencies]
napi-build = { version = "2.1.2", default-features = false }

[profile.production]
codegen-units = 1
inherits = "release"
lto = true
strip = "symbols"
