[package]
name = "iota-sdk-python"
version = "1.0.0-rc.0"
authors = [ "IOTA Stiftung" ]
edition = "2021"
description = "Python bindings for the IOTA SDK library"
documentation = "https://wiki.iota.org/iota-sdk/welcome"
homepage = "https://www.iota.org/"
repository = "https://github.com/iotaledger/iota-sdk"
license = "Apache-2.0"
keywords = [ "iota", "client", "wallet", "transaction", "python" ]
categories = [ "cryptography::cryptocurrencies" ]
publish = false

[lib]
name = "iota_sdk"
crate-type = [ "cdylib" ]
doc = false

[dependencies]
iota-sdk-bindings-core = { path = "../core", default-features = false, features = [ "events", "rocksdb", "ledger_nano", "storage", "stronghold", "mqtt" ] }

futures = { version = "0.3.28", default-features = false }
once_cell = { version = "1.18.0", default-features = false }
pyo3 = { version = "0.19.1", default-features = false, features = [ "macros", "extension-module" ] }
serde_json = { version = "1.0.102", default-features = false }
tokio = { version = "1.29.1", default-features = false }