[package]
name = "iota-client"
version = "2.0.1-rc.7"
authors = [ "IOTA Stiftung" ]
edition = "2021"
description = "The official, general-purpose IOTA client library in Rust for interaction with the IOTA network (Tangle)"
documentation = "https://wiki.iota.org/iota.rs/welcome"
homepage = "https://www.iota.org/"
repository = "https://github.com/iotaledger/iota.rs"
license = "Apache-2.0"
keywords = [ "iota", "tangle", "client" ]
categories = [ "cryptography::cryptocurrencies" ]

[package.metadata.docs.rs]
# To build locally: `RUSTDOCFLAGS="--cfg docsrs" cargo +nightly doc --all-features --no-deps --open`
all-features = true
rustdoc-args = [ "--cfg", "docsrs" ]

[dependencies]
iota-pow = { version = "1.0.0-rc.4", path = "../pow", default-features = false }
iota-types = { version = "1.0.0-rc.7", path = "../types", default-features = false, features = [ "api", "block", "serde", "dto", "std" ] }

async-trait = { version = "0.1.66", default-features = false }
derive_builder = { version = "0.12.0", default-features = false, features = [ "std" ]}
derive_more = { version = "0.99.17", default-features = false, features = [ "from", "as_ref", "deref", "deref_mut" ] }
futures = { version = "0.3.26", default-features = false, features = [ "thread-pool" ] }
hashbrown = { version = "0.13.2", default-features = false, features = [ "ahash", "inline-more" ] }
instant = { version = "0.1.12", default-features = false, features = [ "wasm-bindgen" ] }
iota-crypto = { version = "0.15.3", default-features = false, features = [ "std", "chacha", "blake2b", "ed25519", "random", "slip10", "bip39", "bip39-en", "ternary_encoding" ] }
log = { version = "0.4.17", default-features = false }
num_cpus = { version = "1.15.0", default-features = false }
packable = { version = "0.7.0", default-features = false, features = [ "serde", "primitive-types", "std" ] }
prefix-hex = { version = "0.7.0", default-features = false, features = [ "std" ] }
primitive-types = { version = "0.12.1", default-features = false }
regex = { version = "1.7.1", default-features = false, features = [ "std", "unicode-perl" ], optional = true }
reqwest = { version = "0.11.14", default-features = false, features = [ "json" ] }
serde = { version = "1.0.152", default-features = false, features = [ "derive" ] }
serde_json = { version = "1.0.94", default-features = false }
thiserror = { version = "1.0.39", default-features = false }
url = { version = "2.3.1", default-features = false, features = [ "serde" ] }
zeroize = { version = "1.5.7", default-features = false, features = [ "zeroize_derive" ] }

# MQTT
rumqttc = { version = "0.20.0", default-features = false, features = [ "websocket" ], optional = true }
once_cell = { version = "1.17.1", default-features = false, features = [ "std" ], optional = true }

# ledger hardware wallets
iota-ledger-nano = { version = "1.0.0-alpha.2", default-features = false, optional = true }

# stronghold secret manager integration
iota_stronghold = { version = "1.0.5", default-features = false, features = [ "std" ], optional = true }

# message_interface
backtrace = { version = "0.3.67", default-features = false, features = [ "std" ], optional = true }
tokio = { version = "1.26.0", default-features = false, features = [ "sync" ], optional = true }

[target.'cfg(not(target_family = "wasm"))'.dependencies]
tokio = { version = "1.26.0", default-features = false, features = [ "macros", "rt-multi-thread", "time", "sync" ] }

[target.'cfg(target_family = "wasm")'.dependencies]
gloo-timers = { version = "0.2.6", default-features = false, features = [ "futures" ] }

[dev-dependencies]
iota-types = { version = "1.0.0-rc.7", path = "../types", default-features = false, features = [ "rand" ] }

dotenv = { version = "0.15.0", default-features = false }
fern-logger = { version = "0.5.0", default-features = false }

[features]
default = [ "tls" ]
mqtt = [ "rumqttc", "once_cell", "regex" ]
ledger_nano = [ "iota-ledger-nano" ]
tls = [ "reqwest/rustls-tls" ]
stronghold = [ "iota_stronghold" ]
message_interface = [ "backtrace", "tokio" ]
participation = [ ]

[package.metadata.cargo-udeps.ignore]
normal = [ "async-trait", "derive_builder" ]

