[package]
name = "iota-wallet"
version = "1.0.0-rc.6"
authors = [ "IOTA Stiftung" ]
edition = "2021"
description = "A stateful package for IOTA value transactions"
documentation = "https://wiki.iota.org/wallet.rs/welcome"
homepage = "https://www.iota.org/"
repository = "https://github.com/iotaledger/wallet.rs"
license = "Apache-2.0"
keywords = [ "iota", "wallet", "transaction" ]
categories = [ "cryptography::cryptocurrencies" ]

[dependencies]
iota-client = { version = "2.0.1-rc.7", path = "../client", default-features = false, features = [ "message_interface", "tls" ] }

async-trait = { version = "0.1.66", default-features = false }
backtrace = { version = "0.3.67", default-features = false, features = [ "std" ] }
fern-logger = { version = "0.5.0", default-features = false }
futures = { version = "0.3.26", default-features = false }
getset = { version = "0.1.2", default-features = false }
instant = { version = "0.1.12", default-features = false }
iota-crypto = { version = "0.15.3", default-features = false, features = [ "std", "chacha", "blake2b", "ed25519", "random", "slip10", "bip39", "bip39-en" ] }
log = { version = "0.4.17", default-features = false }
packable = { version = "0.7.0", default-features = false, features = [ "serde", "primitive-types" ] }
prefix-hex = { version = "0.7.0", default-features = false, features = [ "std" ] }
primitive-types = { version = "0.12.1", default-features = false }
rocksdb = { version = "0.20.1", default-features = false, features = [ "lz4" ], optional = true }
serde = { version = "1.0.154", default-features = false, features = [ "derive" ] }
serde_json = { version = "1.0.94", default-features = false }
thiserror = { version = "1.0.39", default-features = false }
tokio = { version = "1.26.0", default-features = false, features = [ "sync", "rt", "time" ] }
zeroize = { version = "1.5.7", default-features = false, features = [ "zeroize_derive" ] }

[target.'cfg(target_family = "wasm")'.dependencies]
gloo-storage = { version = "0.2.2", default-features = false, optional = true }
gloo-timers = { version = "0.2.6", default-features = false, features = [ "futures" ] }
wasm-bindgen-futures = { version = "0.4.34", default-features = false }

[dev-dependencies]
dotenv = { version = "0.15.0", default-features = false }

[features]
# only default for now, should later be replaced by stronghold since stronghold is more secure
default = [ "storage", "rocksdb", "stronghold" ]
ledger_nano = [ "iota-client/ledger_nano" ]
stronghold = [ "iota-client/stronghold", "gloo-storage" ]
storage = []
message_interface = []
events = []
participation = [ "iota-client/participation", "storage" ]

# udeps returns a false positive for this, so we add it here
[package.metadata.cargo-udeps.ignore]
normal = ["backtrace"]

