[dependencies]
backtrace = { version = "0.3.67", default-features = false, features = [ "std" ] }
fern-logger = { version = "0.5.0", default-features = false }
futures = { version = "0.3.26", default-features = false }
getset = { version = "0.1.2", default-features = false }
instant = { version = "0.1.12", default-features = false }
iota-crypto = { version = "0.15.3", default-features = false, features = [ "std", "chacha", "blake2b", "ed25519", "random", "slip10", "bip39", "bip39-en" ] }
log = { version = "0.4.17", default-features = false }
packable = { version = "0.7.0", default-features = false, features = [ "serde", "primitive-types" ] }
prefix-hex = { version = "0.7.0", default-features = false, features = [ "std" ] }
primitive-types = { version = "0.12.1", default-features = false }
rocksdb = { version = "0.20.1", default-features = false, features = [ "lz4" ], optional = true }
serde = { version = "1.0.154", default-features = false, features = [ "derive" ] }
serde_json = { version = "1.0.94", default-features = false }
thiserror = { version = "1.0.39", default-features = false }
tokio = { version = "1.26.0", default-features = false, features = [ "sync", "rt", "time" ] }
zeroize = { version = "1.5.7", default-features = false, features = [ "zeroize_derive" ] }

[target.'cfg(target_family = "wasm")'.dependencies]
gloo-storage = { version = "0.2.2", default-features = false, optional = true }
gloo-timers = { version = "0.2.6", default-features = false, features = [ "futures" ] }
wasm-bindgen-futures = { version = "0.4.34", default-features = false }

[dev-dependencies]
dotenv = { version = "0.15.0", default-features = false }

[features]
default = [ "storage", "rocksdb" ]
message_interface = []
participation = [ "iota-client/participation", "storage" ]

# udeps returns a false positive for this, so we add it here
[package.metadata.cargo-udeps.ignore]
normal = ["backtrace"]

