[package]
name = "iota-wallet-swift"
version = "0.1.0"
edition = "2021"
publish = false

[lib]
name = "iota_wallet"
crate-type = [ "cdylib", "staticlib" ]      # Creates dynamic lib
doc = false

[dependencies]
iota-sdk = { path = "../../../..", features = [ "wallet", "tls", "message_interface", "events", "rocksdb", "stronghold", "storage", "participation" ] }

futures =  { version = "0.3.28", default-features = false }
once_cell = { version = "1.17.2", default-features = false }
serde = { version = "1.0.163", default-features = false, features = [ "derive" ] }
serde_json = { version = "1.0.96", default-features = false }
tokio = { version = "1.28.2", default-features = false }
